# manifoldcf

./: .gitignore  .htaccess  .travis.yml  CHANGES.txt  DEPENDENCIES.txt  DISCLAIMER.txt  Dockerfile  KEYS  LICENSE.txt  NOTICE.txt  README.txt  build.xml  common-build.xml  create-release-candidate-only-artifacts.sh  create-release-candidate.sh  doap_ManifoldCF.rdf  forrest.properties  forrest.properties.xml  mvn-bootstrap.bat  mvn-bootstrap.sh  package-lock.json  package.json  pom.xml  sign-release-artifacts.sh
modules/connectors/filenet/: Makefile.am  build.xml  configure.in  metacarta-filenetconnector-server
modules/connectors/filenet/connectors/filenet/: viewspec.jsp
modules/connectors/filenet/registry-scripts/: run.bat  run.sh  setclasspath.bat
modules/connectors/filenet/server-scripts/: run.bat  run.sh  setclasspath.bat
modules/connectors/filesystem/: build.xml  configure.in
modules/connectors/filesystem/connectors/filesystem/: editconfig.jsp  editspec.jsp  viewspec.jsp
modules/connectors/filesystem/debian/: control
modules/connectors/filesystem/upstream-diffs/: README
modules/connectors/meridio/: 08meridioconnector.policy  Makefile.am  build.xml  configure.in  meridio-client-config.wsdd  org.apache.lcf.meridio.wsddpath
modules/connectors/meridio/connectors/meridio/: editspec.jsp  headerspec.jsp
modules/connectors/meridio/lib/: Makefile.am
modules/connectors/meridio/upstream-diffs/: DMDataSet.xsd.xmldiff  RMDataSet.xsd.xmldiff
modules/connectors/meridio/webservice/: Installation readme.txt
modules/connectors/rss/: 50_rssconnector  Makefile.am  build.xml  configure.in
modules/connectors/rss/commands/: Makefile.am  rssconnector-getseedlist
modules/connectors/rss/debian/: control
modules/connectors/webcrawler/: Makefile.am  bootstrap  build.xml  configure.in
modules/connectors/webcrawler/connectors/webcrawler/: postconfig.jsp
modules/connectors/webcrawler/debian/: control
modules/connectors/webcrawler/upstream-diffs/: README
modules/framework/authority-webapp/: Makefile.am
modules/framework/authority-webapp/WEB-INF/: web.xml
modules/framework/java-common/ui/: Makefile.am
products/connectors/documentum/: 08documentumconnector.policy  Makefile.am  documentumconnector-monitor  documentumconnector-monitor-daemon  documentumconnector-rmiregistry  metacarta-documentumconnector-monitor  metacarta-documentumconnector-rmiregistry  metacarta-documentumconnector-server
products/connectors/documentum/authorities/DCTM/: editconfig.jsp  postconfig.jsp
products/connectors/documentum/connectors/DCTM/: editspec.jsp  postconfig.jsp  viewspec.jsp
products/connectors/documentum/debian/: control
products/connectors/filesystem/: Makefile.am
products/connectors/filesystem/connectors/filesystem/: headerconfig.jsp  postconfig.jsp  postspec.jsp
products/connectors/framework/: Makefile.am  Makefile.global
products/connectors/framework/crawler/: 99_crawler  Makefile.am  adminHeaders.jsp  backup-crawler-configuration  banner.jsp  editjob.jsp  execute.jsp  index.jsp  listauthorities.jsp  listconnections.jsp  maxactivityreport.jsp  navigation.jsp  queuestatus.jsp  style.css  viewauthority.jsp
products/connectors/framework/crawler/WEB-INF/: web.xml
products/connectors/framework/crawler/authorityservice/: 08authorityservice.policy  authorityservice_webapp
products/connectors/framework/crawler/pullagent/: Makefile.am
products/connectors/framework/debian/: control
products/connectors/framework/java-agents/: 30_create-agents-cluster  Makefile.am  agent-logging.conf  agents  agents-log-clean  agents.conf  metacarta-upgrade-agents-database
products/connectors/framework/java-agents/commands/: Makefile.am  agents-registeragent  agents-stop  agents-synchronizeall  agents-uninstall  agents-unregisteralloutputs
products/connectors/framework/java-common/core/: Makefile.am  MetaCartaVersion.java.in
products/connectors/framework/tests/: ThreadLockSpinner.java  UILockSpinner.java
products/connectors/gts/: 50_gtsconnector  Makefile.am  configure.in
products/connectors/gts/output/gts/: editconfig.jsp  editspec.jsp  headerconfig.jsp  postconfig.jsp  viewspec.jsp
products/connectors/gts/upstream-diffs/: README
products/connectors/jcifs/: 50_jcifsconnector  Makefile.am  configure.in  shareconnector_control
products/connectors/jcifs/commands/: jcifs-getconnectioninfo
products/connectors/jcifs/connectors/sharedrive/: editconfig.jsp  editspec.jsp  headerconfig.jsp  headerspec.jsp  postconfig.jsp  postspec.jsp
products/connectors/jcifs/debian/: control
products/connectors/jcifs/upstream-diffs/: README
products/connectors/livelink/: 08livelinkconnector.policy  50_livelink  Makefile.am  configure.in
products/connectors/livelink/authorities/livelink/: editconfig.jsp  headerconfig.jsp
products/connectors/livelink/commands/: livelink-getconnectioninfo
products/connectors/livelink/connectors/livelink/: editconfig.jsp  editspec.jsp  headerconfig.jsp  headerspec.jsp  postspec.jsp
products/connectors/livelink/upstream-diffs/: README
products/connectors/memex/: 08memexconnector.policy  Makefile.am  memexconnector_control
products/connectors/memex/authorities/memex/: headerconfig.jsp
products/connectors/memex/connectors/memex/: editspec.jsp  headerconfig.jsp  headerspec.jsp  postconfig.jsp  viewspec.jsp
products/connectors/memex/upstream-diffs/: README
products/connectors/nulloutput/: 50_nullconnector  Makefile.am
products/connectors/nulloutput/debian/: control
products/connectors/nulloutput/output/nullconnector/: editspec.jsp  postspec.jsp
products/connectors/nulloutput/upstream-diffs/: README
products/connectors/sharepoint/: MCPermissions.wsdl  Makefile.am  readme.txt
products/connectors/sharepoint/connectors/sharepoint/: headerconfig.jsp  headerspec.jsp  viewspec.jsp
products/connectors/sharepoint/upstream-diffs/: README
products/connectors/sharepoint/webservice/: MCPermissions.cs
products/connectors/sharepoint/webservice/ISAPI/: MCPermissionsdisco.aspx  MCPermissionswsdl.aspx
(+7603 files in other folders)
